--- a/arch/arm64/configs/martini_defconfig
+++ b/arch/arm64/configs/martini_defconfig
@@ -403,6 +403,7 @@ CONFIG_CNSS2=y
 CONFIG_CNSS2_QMI=y
 CONFIG_CNSS_ASYNC=y
 CONFIG_BUS_AUTO_SUSPEND=y
+CONFIG_CNSS_QCA6490=y
 CONFIG_OPLUS_FEATURE_WIFI_BDF=y
 CONFIG_CNSS_GENL=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
