--- a/mm/zram_opt/Kconfig
+++ b/mm/zram_opt/Kconfig
@@ -2,7 +2,7 @@
 # Copyright (C) 2020-2022 Oplus. All rights reserved.
 
 config OPLUS_FEATURE_ZRAM_OPT
-  tristate "oplus zram opt
+  tristate "oplus zram opt"
   default n
   help
     define this config to enable oplus zram.
